--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     hostname: covid19df
     restart: always
     ports:
-      - 8502:8501
+      - ${PORT}:8501
     volumes:
       - ./data:/app/data
       - ./covid19df.py:/app/main.py
